[project]
name = "cluefin"
version = "0.1.0"
description = "Clearly Looking U Entered Financial Information"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "packages/cluefin-openapi",
    "packages/cluefin-ta",
    "packages/cluefin-xbrl",
    "apps/cluefin-cli",
    "apps/cluefin-desk",
    "apps/cluefin-rpc",
]

[dependency-groups]
dev = [
    "coverage>=7.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "python-dotenv>=1.1.1",
    "requests-mock>=1.12.1",
    "ruff>=0.12.3",
]

[tool.uv.sources]
cluefin-openapi = { workspace = true }
cluefin-ta = { workspace = true }
cluefin-xbrl = { workspace = true }
cluefin-cli = { workspace = true }
cluefin-desk = { workspace = true }
cluefin-rpc = { workspace = true }

[tool.ruff]
line-length = 120
fix = true
target-version = "py311"
extend-exclude = ["*.json", "*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC", "T20"]
ignore = ["F401", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["T201"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
    "realtime: real-time data tests (requires market hours 9:00-15:30 KST)",
    "slow: mark test as slow running",
]
addopts = "-ra"
testpaths = [
    "packages/cluefin-openapi/tests",
    "packages/cluefin-ta/tests",
    "packages/cluefin-xbrl/tests",
    "apps/cluefin-cli/tests",
    "apps/cluefin-desk/tests",
    "apps/cluefin-rpc/tests",
]

[tool.coverage.run]
source = [
    "packages/cluefin-openapi/src",
    "packages/cluefin-ta/src",
    "packages/cluefin-xbrl/src",
    "apps/cluefin-cli/src",
    "apps/cluefin-desk/src",
    "apps/cluefin-rpc/src",
]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
