[project]
name = "cluefin-cli"
version = "0.1.0"
description = "Korean financial investment CLI toolkit with technical analysis and AI insights"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cluefin-openapi",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.0.0",
    "plotext>=5.2.8",
    "loguru>=0.7.3",
    "pydantic>=2.12.0,<3.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "shap>=0.47.2,<1.0.0",
    "cluefin-ta",
    "imbalanced-learn>=0.14.0",
    "duckdb>=1.4.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cluefin-cli = "cluefin_cli.main:cli"

[tool.ruff]
extend = "../../pyproject.toml"
include = ["src/**", "tests/**"]
