[project]
name = "cluefin-desk"
version = "0.1.0"
description = "Interactive TUI dashboard for Korean stock market analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cluefin-openapi",
    "cluefin-ta",
    "textual>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "loguru>=0.7.3",
    "plotext>=5.2.8",
]

[project.optional-dependencies]
xbrl = ["cluefin-xbrl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cluefin-desk = "cluefin_desk.app:main"

[tool.ruff]
extend = "../../pyproject.toml"
include = ["src/**", "tests/**"]
extend-exclude = ["*.tcss"]
