[project]
name = "cluefin-rpc"
version = "0.1.0"
description = "JSON-RPC 2.0 server for cluefin API bridge"
requires-python = ">=3.10"
dependencies = [
    "cluefin-openapi",
    "cluefin-ta",
    "cluefin-xbrl",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.3",
    "numpy>=1.24.0",
]

[project.scripts]
cluefin-rpc = "cluefin_rpc.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
include = ["src/**", "tests/**"]
