[project]
name = "cluefin-ta-cli"
version = "0.1.0"
description = "Agent-friendly CLI for cluefin-ta indicators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cluefin-ta",
    "numpy>=1.24.0",
]

[project.scripts]
cluefin-ta-cli = "cluefin_ta_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
include = ["src/**", "tests/**"]
